# WGOT

./: CMakeCache.txt  CMakeLists.txt  Makefile  WGOT  WGOT.cbp  WGOptimalTransport.cpp  WGOptimalTransport.h  WGPoissonSolverQkQkRTkRect.h  WG_Q2Q2RT2_refs_1.txt  c_table.txt  cmake_install.cmake  cos_WGOT_results.txt  cos_cos_1_refs.txt  cos_cos_2_refs.txt  cos_cos_3_refs.txt  cos_cos_3d_h2_approx_sln.txt  cos_cos_3d_h2_approx_sln_x.txt  cos_cos_3d_h2_approx_sln_y.txt  cos_cos_3d_h2_approx_sln_z.txt  cos_cos_4_refs.txt  cos_cos_5_refs.txt  cos_cos_approx_sln.txt  cos_cos_converg_data.csv  cos_face_data.csv  cos_interior_solution.csv  driver.cpp  error_y.csv  error_z.txt  gnuplot.gpl  main.cpp  sin_2_WGOT_results.txt  sin_2_face_data.csv  sin_2_interior_solution.csv  sin_2_sin_2_approx_sln.txt  sin_2_sin_2_converg_data.csv  sin_sin_1_refs_deg_1.txt  sin_sin_1_refs_deg_2.txt  sin_sin_2_refs_deg_1.txt  sin_sin_2_refs_deg_2.txt  sin_sin_3_refs_deg_1.txt  (+11 more)
