CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

FIND_PACKAGE(deal.II 9.2.0 QUIET
        HINTS /Users/colinjensen/.local/bin/dealii-9.2.0 ${deal.II_DIR} ${DEAL_II_DIR} ../ ../../ $ENV{DEAL_II_DIR}
        )
DEAL_II_INITIALIZE_CACHED_VARIABLES()

PROJECT(WGOT)

ADD_EXECUTABLE(WGOT WGOptimalTransport.cpp)
DEAL_II_SETUP_TARGET(WGOT)
